name:              BustAQuiz
version:           0.0.0
license:           BSD3
license-file:      LICENSE
author:            Jeff Foster / Robert Severn
maintainer:        Robert Severn / Jeff Foster
synopsis:          Possibly the greatest quiz application ever
description:       Automatically generates an infinite variety of questions
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://www.bustaquiz.com/

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

library
    if flag(devel)
        Buildable: True
    else
        Buildable: False
    exposed-modules: Controller
    hs-source-dirs: .
    other-modules:   Settings
                     StaticFiles
                     Handler.Root

executable         BustaQuiz
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded

    main-is:       Server.hs
    hs-source-dirs: .

    build-depends: base         >= 4       && < 5
                 , yesod
                 , yesod-core   >= 0.8     && < 0.9
                 , yesod-static
                 , yesod-auth
                 , wai-extra
                 , directory
                 , bytestring
                 , text
                 , template-haskell
                 , hamlet
                 , transformers
                 , wai
                 , warp
                 , blaze-builder
                 , split
                 , containers
                 , data-object-json
                 , data-object
                 , web-routes-quasi
                 , array
                 , random
                 , convertible-text
                 , attempt
                 , HTTP
                 , hjsmin
                 , mime-mail
                 , persistent-sqlite
                 , persistent
    ghc-options:   -Wall -threaded
